kubernetes/apps/aria-stack/app/ariang/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name ariang
spec:
  selector:
    app.kubernetes.io/name: *name
  ports:
    - port: 80
