kubernetes/apps/aria-stack/app/ariang/idvn.http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idvn-ariang-http
spec:
  parentRefs:
    - name: gateway-idvn-private
      sectionName: http
      namespace: gateway-api
  hostnames:
    - ariang.${IDVN_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ariang
          port: 80
